Fix: scrollbars on text with h1..h6

--- a/svyThemeRoller/medias/themes/theme-servoy.less
+++ b/svyThemeRoller/medias/themes/theme-servoy.less
@@ -9,7 +9,12 @@
 @secondary-color-light: #464E56;				/* Secondary color light*/
 @secondary-color-dark: #364453;					/* Secondary color dark*/
 
+
 /* Font Sizes */
+
+/* when the font-size is set to 62.5 1rem = 10px */
+@rem-to-px: 10;								
+
 @font-size-h1 :3.6rem;
 @font-size-h2 : 3.0rem;
 @font-size-h3 : 2.4rem;
@@ -202,31 +207,37 @@ div:not(.container):not(.container-fluid):not([class^="col-xs-"]):not([class^="c
 h1, .h1, h2, .h2, h3, .h3,
 h4, .h4, h5, .h5, h6, .h6 {
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 0;	
 }
 
 h1, .h1 {
   font-size: @font-size-h1;
+  line-height: if((isunit(@font-size-h1, rem)), unit(ceil(@font-size-h1 * @rem-to-px * 1.1), px), ceil(@font-size-h1 * 1.1));
 }
 
 h2, .h2 {
   font-size: @font-size-h2;
+  line-height: if((isunit(@font-size-h2, rem)), unit(ceil(@font-size-h2 * @rem-to-px * 1.1), px), ceil(@font-size-h2 * 1.1));
 }
 
 h3, .h3 {
   font-size: @font-size-h3;
+  line-height: if((isunit(@font-size-h3, rem)), unit(ceil(@font-size-h3 * @rem-to-px * 1.1), px), ceil(@font-size-h3 * 1.1));
 }
 
 h4, .h4 {
   font-size: @font-size-h4;
+  line-height: if((isunit(@font-size-h4, rem)), unit(ceil(@font-size-h4 * @rem-to-px * 1.1), px), ceil(@font-size-h4 * 1.1));
 }
 
 h5, .h5 {
   font-size: @font-size-h5;
+  line-height: if((isunit(@font-size-h5, rem)), unit(ceil(@font-size-h5 * @rem-to-px * 1.1), px), ceil(@font-size-h5 * 1.1));
 }
 
 h6, .h6 {
   font-size: @font-size-h6;
+  line-height: if((isunit(@font-size-h6, rem)), unit(ceil(@font-size-h6 * @rem-to-px * 1.1), px), ceil(@font-size-h6 * 1.1));
 }
 
 /* To be used on a tab/tabless panel when nesting responsive form. Is used to indent the nested form with the container form */
